6652379: File.setLastModified fails on large files (lnx only)

Reviewed-by: iris